criação dos botões de pessoa juridica/fisica na tela de cadastro

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,8 @@ default: &default
 development:
   <<: *default
   database: solaria_development
+  username: solaria
+  password: solaria123
 
 test:
   <<: *default
